results/classifier/zero-shot/108/other/1541
graphic: 0.817
files: 0.765
device: 0.752
permissions: 0.722
semantic: 0.599
network: 0.553
vnc: 0.539
debug: 0.529
PID: 0.485
other: 0.482
socket: 0.467
performance: 0.379
KVM: 0.312
boot: 0.230

Invalid position of G_NORETURN in clang v15
Description of problem:
Order of `G_NORETURN` used in https://gitlab.com/qemu-project/qemu/-/blob/0f3de970febd2c9b29dccecb63ca928c6802a101/include/qemu/osdep.h#L240-242 is not valid in clang++ 15.0.7.

Switching `extern` with `G_NORETURN` seems to fix the issue.
Steps to reproduce:
1. Build qemu system for MIPSEL or use minimal reproducer:

`example.cpp`:
```
#include "/path/to/qemu/include/glib-compat.h"

extern G_NORETURN
void // QEMU_ERROR("code path is reachable")
    qemu_build_not_reached_always(void);
```

```
$ clang++ --version
clang version 15.0.7
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
$ clang++ -m64 -mcx16 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -fcolor-diagnostics -Wall -Winvalid-pch -std=gnu++11 -O0 -g example.cpp
example.cpp:3:8: error: an attribute list cannot appear here
extern G_NORETURN
       ^~~~~~~~~~
/usr/include/glib-2.0/glib/gmacros.h:1075:21: note: expanded from macro 'G_NORETURN'
# define G_NORETURN [[noreturn]]
                    ^~~~~~~~~~~~
1 error generated.
```
